# mlflow-with-ray-serve-demo

./: .env.template  .gitignore  LICENSE  README.md  app.py  config.example.yml  config.yml  pyproject.toml  sandbox.ipynb  train_catboost_model.ipynb  train_xgboost_model.ipynb
docker/: ray-serve-py312.Dockerfile  ray-serve-py39.Dockerfile
docs/: 1_preparing-models-for-deployment.md  2_deploying-models-on-kubernetes.md  3_deploying-models-on-vms.md  4_frequently_asked_questions.md
examples/: config-py312.yml  config-py39.yml  iris_classifier-py312-catboost.request.http  iris_classifier-py312-catboost12.request.http  iris_classifier-py312-xgboost1.request.http  iris_classifier-py312-xgboost2.request.http  iris_classifier-py39-catboost11.request.http  iris_classifier-py39-catboost12.request.http  rayservice-py312.kuberay.yml  request-catboost-iris-classifier.http  request-old-catboost-iris-classifier.http  requirements.iris_classifier-py312-catboost.txt  requirements.iris_classifier-py312-catboost12.txt  requirements.iris_classifier-py312-xgboost1.txt  requirements.iris_classifier-py312-xgboost2.txt  requirements.iris_classifier-py39-catboost11.txt  requirements.iris_classifier-py39-catboost12.txt
mlray/: app.py  batching_app.py  config.py  mlflow.py  router.py  utils.py
mlray/cli/: deploy.py  generate-config.py  generate_config.py  main.py  shutdown.py  update_config.py
