[project]
name = "ray-serve-demo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "mlflow",
    "pandas",
    "scikit-learn",
    "ipykernel",
    "virtualenv",
    "python-dotenv",
    "catboost",
    "torch",
    "ray[serve]",
    "pip",
    "pydantic",
    "transformers",
    "starlette",
    "boto3",
]

[tool.setuptools.packages.find]
include = ["mlray"]

[tool.uv]
package = true

[project.scripts]
mlray = "mlray.cli.main:main"
