[project]
name = "ray-serve-demo"
version = "0.1.0"
description = "A demo of how MLflow models can be deployed with Ray Serve"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [{ name = "nginyc" }]
dependencies = [
    "mlflow",
    "ipykernel",
    "virtualenv",
    "python-dotenv",
    "ray[serve]",
    "pip",
    "pydantic",
    "starlette",
    "boto3",
]

[tool.setuptools.packages.find]
include = ["mlray"]

[tool.uv]
package = true

[project.scripts]
mlray = "mlray.cli.main:main"
